sonar/k8s-config/bkp/sonar-deployment.yaml
#Deployment for Postgres
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: postgresql-sonar
  namespace: sonar
spec:
  replicas: 1
  template:
    metadata: 
      name: postgresql-sonar
      labels:
        app: postgresql-sonar
    spec:
      containers:
        - name: postgreqsl-sonar
          image: postgres:9.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgresql-port
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: sonar-postgres-data
