sonar/k8s-config/bkp/sonarqube-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: sonar
  namespace: sonar
spec:
  replicas: 1
  template:
    metadata:
      name: sonar
      labels: 
        app: sonar
    spec: 
      containers:
      - name: sonar
        image: sonarqube:7.9.4-community
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
          name: sonarport
