sonar/k8s-config/bkp/sonar-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
        #annotations:
          #    nginx.ingress.kubernetes.io/ssl-redirect: "false"
          #    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
          #    nginx.ingress.kubernetes.io/rewrite-target: /
  name: sonarqube-ingress
  namespace: sonar
spec:
  rules:      
    - host: sonar.wawa.demos.hclets.com
      http:
        paths:
        -  path: /
           backend:
             serviceName: sonar
             servicePort: 80
